fix button spacing in forms

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,8 @@ input[type="submit"] {
 }
 
 input[type="submit"]{
+    justify-self: center;
+    margin-top: 2rem;
     margin-bottom: 1rem;
 }
 
@@ -23,11 +25,12 @@ input[type="submit"]{
 
 /* for the forms */
 form {
+    display: flex;
+    flex-direction: column;
     border: solid lightgray 2px;
     border-radius: 10px;
     padding: 3rem;
     margin: 1rem;
-    width: 50vw;
     position: absolute;
     top: 25%;
     left: 25%;
@@ -59,7 +62,6 @@ input {
     margin-left: 3rem;
     margin-top: 0.8rem;
 }
-
 
 /* for radio button options */
 input[type="radio"] {
